	-Experimenting with ball-style logic for the cursor.
		-How to show this with the READY/PLAY button?
8/3/23
	-Added ability for the player to change their party member's names and classes through the setup screen
		-Might be really obnoxious on controller though
	-Added underline behavior for the READY/PLAY button, which looks pretty nice
	-Corrected message/string loading index discrepancy

TODO:
	-Last party member learning a spell was interrupted by THE MAZE AWAITS?

	REQUIRES LOGIC:
		-Make startup screen
		-Write enemy AI handling
		-Write basic encounter generation
		-Placing player, campfire, and exit in new maze when it is generated
		-Write sound effect routines
		-Add load a visual effect routine

	DOESN'T REQUIRE LOGIC:
		-Add more text & messages
		-Create all enemy graphics
		-Create all enemy AI tables
		-Create all visual effects
			-Make effect visualizer?
		-Create all sound effects
			-Make sound effect tracker?

	-How is enemy AI going to be stored?
		-List of meta-enemyActions, 4 per enemy type
			-Meta-enemyActions might be along the lines of "attack frontline", "cast heal self", "cast sleep any enemy", etc.
			-These meta-actions are then converted into actual enemyAction by LDetermineEnemyAI routine
		-Make AI dependent on health for bosses? If space allows

	Requirements for functional game loop:
		-Functional combat - 80%
			-Control Flow/Battler Selection - 100%
			-Fighting - 100%
			-Spellcasting - 100%
			-Moving - 100%
			-Running - 100%
			-Functional status effects - 100%
			-Enemy AI - 0%
				-Special moves - ??%
			-Character advancement - 100%
			-Mana implementation - 100%
		-Additional maze logic
			-Moving between floors - 60%
			-Encounter generation - 65%
				-Bosses - 50%
			-Campfires - 100%
		-Transitioning between maze and battles - 100%

		-Advanced effect system - 80% (mostly used by spells)
			-No routine for setting a visual effect
			
		-Sound engine - 0%
		
		-Name entry and class selection screen - 0%
